--- a/Fundamentos/bloco-10-Jest/dia-2-jest-assync/package.json
+++ b/Fundamentos/bloco-10-Jest/dia-2-jest-assync/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^27.1.0"
+    "fetch": "^1.1.0",
+    "jest": "^27.1.0",
+    "node-fetch": "^3.0.0"
   }
 }
