--- a/Desenvolvimento-Frontend/bloco-12-componentes-estados/my-pokedex-3/package.json
+++ b/Desenvolvimento-Frontend/bloco-12-componentes-estados/my-pokedex-3/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "my-pokedex",
+  "name": "my-pokedex-3",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -35,9 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "fetch": "^1.1.0",
-    "node-fetch": "^3.0.0"
   }
 }
