exercises do dia 22.1

--- a/desenvolvimento-backend/bloco-22/dia-1/package.json
+++ b/desenvolvimento-backend/bloco-22/dia-1/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node exercises",
     "imc": "node exercises/imc.js",
     "velocidade": "node exercises/velocidade.js",
+    "sorteio": "node exercises/sorteio.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
