--- a/desenvolvimento-backend/bloco-24/dia-1/package.json
+++ b/desenvolvimento-backend/bloco-24/dia-1/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "express-rescue": "^1.1.31",
     "mysql2": "^2.3.3",
     "sequelize": "^6.16.1"
   },
